[gd_scene load_steps=3 format=3 uid="uid://bvgfp5dbrsl5m"]

[ext_resource type="Script" uid="uid://c712e4ymoidby" path="res://Stages/Menus/Settings/settings.gd" id="1_yx0im"]
[ext_resource type="AudioStream" uid="uid://eqcf7no4nk74" path="res://Stages/Menus/Assets/Sound/beep 2.wav" id="2_wpcql"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_yx0im")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 180.0
offset_top = 58.0
offset_right = 460.0
offset_bottom = 316.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -40.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 38

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -40.0
max_value = 0.0

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wpcql")
bus = &"Music"

[node name="SFXAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wpcql")
bus = &"SFX"
